# term-expando

./: Pipfile  README.rst  environment.sh  requirements.txt  setup.cfg
scripts/: expando
src/term_expando/: __init__.py  cli.py  expando.py  ontol_index.py
tests/: test_expand.py  test_go.py  test_import.py  test_ontol_index.py  util.py
tests/data/: basic.tsv  go-small-id2name.tsv  gotext.txt  gp2name.tsv  src.tsv
